# minecraft-fcos

./: .gitignore  LICENSE  README.md  bb.py  bbedit.py  detect.ipynb  detect_open_vocab.ipynb  dino.ipynb  fcos.ipynb  fcos_run.py  gemini.ipynb  gemini.py  huggingface.ipynb  label-test.ipynb  label.ipynb  main.py  mc_run.py  models.py  pyproject.toml  torch_exp.ipynb  tt.py  tt_fcos.py  yolo_check.ipynb  yolo_train.ipynb
.claude/: settings.local.json
old/: gemini.ipynb  torch_exp.ipynb  yolo_check.ipynb  yolo_run.py  yolo_train.ipynb
