[project]
name = "mc-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "requests>=2.28.1",
    "supervision>=0.26.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.66.5",
    "transformers>=4.57.1",
    "ultralytics>=8.3.222",
]

[tool.uv.sources]
torch = [{index = "pytorch-cu130", marker = "sys_platform == 'linux'"}]
torchvision = [{index = "pytorch-cu130", marker = "sys_platform == 'linux'"}]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
